--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body{
     align-items:center;
     /* text-align: center; */
     height: 100vh;
-    background-color: #f4e4ba;
+    background-color: #524e42;
 
 }
 
